Bug 722011 - Comma at the end of enums are not valid in C++, r=Ms2ger

Skia headers are included from c++ code and -pedantic is on by default,
which leads to 'error: comma at end of enumerator list' on OpenBSD/gcc 4.2.1.