gfx/skia/update.sh
@@ -108,4 +108,5 @@ patch -p3 < skia_restrict_problem.patch
 patch -p3 < user-config.patch
 # Bug 715718 - Unitialized variable 'margin' in compute_bounds : SkDraw.cpp
 patch -p3 < uninitialized-margin.patch
-
+# Bug 722011 - Fix comma at end of enum list
+patch -p3 < fix-comma-end-enum-list.patch
